--- a/Atharva_Ishani_EXTC_Website/.gitignore
+++ b/Atharva_Ishani_EXTC_Website/.gitignore
@@ -21,3 +21,7 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+
+Atharva_Ishani_EXTC_Website/src/videos/EXTC_Video_2024_Final.mp4
+Atharva_Ishani_EXTC_Website/src/videos/EXTC_Video.mp4
